compiler/tests/success/x86-64/copy_negative_length.jazz
export fn main (reg ptr u64[-1] a) -> reg ptr u64[-1] {
  reg u64[-1] r1;
  r1 = #copy(a);
  a = #copy(r1);
  return a;
}
