compiler/tests/fail/param_expansion/x86-64/array_too_large_global.jazz
u64[0x10000000000000000] a = { 1 };
